# physioflow-app

./: .gitignore  CHANGELOG.md  README.md  build-web.cjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
public/: manifest.json  sw.js
src/: Analytics.jsx  App.jsx  Dashboard.jsx  FlowCanvas.jsx  FlowWorkspaceOverlay.jsx  GuidePanel.jsx  HierarchyManager.jsx  Inspector.jsx  MediaSettings.jsx  MediaStep.jsx  Modal.jsx  Onboarding.jsx  PreRunChecklist.jsx  QuestionnaireDesigner.jsx  QuestionnaireForm.jsx  QuestionnaireLibrary.jsx  ResourceLibrary.jsx  RuntimeContent.jsx  RuntimeRunnerPage.jsx  SessionManager.jsx  StepPreview.jsx  TemplateConfig.jsx  analytics.css  assetStore.js  constants.js  dashboard.css  dataStore.js  domain.js  engine.js  exporter.js  externalForms.js  flow-controls.css  flow.css  flowEngine.js  fsStorage.js  i18n.css  i18n.jsx  integrity.js  localWorkspace.js  main.jsx  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/analysis/: CrossSessionCompare.jsx  ResponseCharts.jsx  TimelineView.jsx  WindowCards.jsx  charts.js
tests/: domain.test.js  e2e-cdp.mjs  external-forms.test.js  integrity.test.js  readiness.test.js  runner-state.test.js  runtime.test.js
