[package]
name = "physioflow"
version = "0.2.0"
description = "Visual experiment workflow system for behavioral and physiological research"
authors = ["PhysioFlow"]
edition = "2021"

[lib]
name = "physioflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
